@@ -1,3 +1,13 @@
+2000-08-24  Darren Stalder  <torin@daft.com>
+
+	* README: After the setup questions are asked, mention that you
+	can prepare and use a response file.
+
+	* setup/query_util.pl (prompt): Allow prompt to read from STDIN if
+	there is any data waiting there.  This allows the installer to
+	prepare a response file for the questions; very useful for
+	packaging mj2.
+
 2000-08-24  Michael Yount <csf@moscow.com>
 
 	* bin/mj_wwwusr:  Include digests when the details about
